--- a/index.css
+++ b/index.css
@@ -1,18 +1,17 @@
-.list-box {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-}
-
 .box {
-    border: 1px solid #000;
-    background: #000;
-    color: white;
-    border-radius: 5px;
-    width: 100%;
-    /* căn chỉnh tỉ lệ kích thước chiều dài và chiều rộng */
-    aspect-ratio: 1;
-
-    /* aspect-ratio: 16/9 */
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
 }
 
+.box--black {
+    background-color: black;
+}
+
+.box--white {
+    background-color: white;
+}
+
+.row {
+    display: flex;
+}
